--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "clsx": "^1.1.1",
+    "epubjs": "^0.3.88",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
