--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react-dom": "^17.0.9",
     "clsx": "^1.1.1",
     "epubjs": "^0.3.88",
+    "pdfjs-dist": "^2.6.347",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -45,6 +46,7 @@
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
+    "@types/pdfjs-dist": "^2.7.5",
     "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
