--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^12.20.26",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.22.0",
     "clsx": "^1.1.1",
     "epubjs": "^0.3.88",
     "pdfjs-dist": "^2.6.347",
@@ -46,6 +47,7 @@
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/pdfjs-dist": "^2.7.5",
     "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
