--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "pdfjs-dist": "^2.6.347",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.3",
@@ -49,6 +51,8 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/pdfjs-dist": "^2.7.5",
+    "@types/react-router-config": "^5.0.3",
+    "@types/react-router-dom": "^5.3.0",
     "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
